 ! Base: Made some minor changes so that the above will work. (QueryString.php)
 ! Base: Don't cache URLs with a session. (QueryString.php)
 + Base: Added a file, PrettyUrls-Filters.php, to place the code of filter extensions in.
 % Started the actions-ext-none package, to rewrite miscellaneous action urls.

Pretty URLs 0.4                                                   March 14, 2007
================================================================================
 ! Base: Now following the SMF Coding Guidelines (I hope).
 ! Base: It wasn't compatible with another mod, my own! (Oh the shame!) (PackageGet.php)
 + Base: Transliterate some Cyrillic characters. (Subs-PrettyUrls.php)
 % Removed the TP-ext-none package, and moved its changes to the ext-none package.
 ! ext-none: Added error="skip" attributes to many less essential changes so it will have a better chance of installing.
 ! Base: $context['pretty'] wasn't defined in SSI.php.
 + Base: If the database encoding isn't UTF-8 and multibyte string functions are available, try converting the text to UTF-8. (Subs-PrettyUrls.php)
 ! Base: Halved the number of queries used to synchronise the topic URLs. (Subs-PrettyUrls.php)
 + Base: Allow Arabic to be romanised. (QueryString.php, Subs-PrettyUrls.php, example.htaccess)
 % ext-none: Broke up Major.xml into 3 files because it was too big for the package manager.

Pretty URLs 0.3                                                 January 20, 2007
================================================================================
 + Base: Added some Turkish (and other) characters. (Subs-PrettyUrls.php)
 ! ext-none: Fixed some problems in SSI.php.
 + Base: Give new topics a pretty URL. (Subs-Post.php)
 + TP-ext-none: Change the URLs of the front page in TP_boardNews(). (TPortal.php)
 + ext-none: Change the URLs of Stats.php.
 + Added a Package List. (packages.xml)
 + Base: Added the canonicaliseUrl() function to fix relative URLs. (PackageGet.php)
